--- a/bltts_tech_report/index.html
+++ b/bltts_tech_report/index.html
@@ -27,7 +27,7 @@
   </section>
 
   <section class="main-content" style="padding: 50px 150px;">
-    <h1 id="title">BLTTS: Chinese Dialectal Speech Synthesis Towards Human-like Spontaneous Representation</h1>
+    <h1 id="title">BLTTS: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</h1>
 
     <p style="text-align: center;">Xxxxxx Xxx, Xxxxxx Xxx, Xxxxxx Xxx, Xxxxxx Xxx, Xxxxxx Xxx, Xxxxxx Xxx</p>
       
