--- a/bltts_tech_report/index.html
+++ b/bltts_tech_report/index.html
@@ -50,13 +50,13 @@
 		<li><a href="#mandarin_speaker">Mandarin Speaker Fine-tune</a>
 	</ul>
 
-	<p style="text-align: center;"><img src='images/figure1.jpg' style="max-width: 100%;max-height: 256px;"></p>
-	<div align="center"><b>Fig.1</b> The overview architecture of BLTTS<a name="fig1"></a></div>
+	<p style="text-align: center;"><img src='images/figure1.jpg' style="max-width: 100%;max-height: 256px;"><a name="fig1"></a></p>
+	<div align="center"><b>Fig.1</b> The overview architecture of BLTTS</div>
 
 	<br><br>
 	
-	<p style="text-align: center;"><img src='images/figure2.jpg' style="max-width: 100%;max-height: 384px;"></p>
-	<div align="center"><b>Fig.2</b> The structure of Dialect MoE<a name="fig2"></div>
+	<p style="text-align: center;"><img src='images/figure2.jpg' style="max-width: 100%;max-height: 384px;"><a name="fig2"></p>
+	<div align="center"><b>Fig.2</b> The structure of Dialect MoE</div>
 
 	<br><br>
 
@@ -274,7 +274,7 @@
 
 	<h2>4. Mandarin Speaker Fine-tune<a name="mandarin_speaker"></a></h2>
 	<header style="font-size: xx-small;margin-bottom: 3em;">
-	<p>文本来源：<a href="https://bcc.blcu.edu.cn/" target="_blank">https://bcc.blcu.edu.cn/</a> BCC语料库，部分有小调整。</p>
+	<p>文本来源：<a href="https://bcc.blcu.edu.cn/" target="_blank">BCC语料库</a>，部分有小调整。</p>
 	</header>
 	<table style="width: 100%;">
 		<thead>
