--- a/bltts_tech_report/index.html
+++ b/bltts_tech_report/index.html
@@ -50,19 +50,25 @@
 		<li><a href="#mandarin_speaker">Mandarin Speaker Fine-tune</a>
 	</ul>
 
-	<p style="text-align: center;"><img src='images/figure1.jpg' style="max-width: 100%;max-height: 256px;"><a name="fig1"></a></p>
+	<p style="text-align: center;"><a name="fig1"></a><img src='images/figure1.jpg' style="max-width: 100%;max-height: 256px;"></p>
 	<div align="center"><b>Fig.1</b> The overview architecture of BLTTS</div>
 
 	<br><br>
 	
-	<p style="text-align: center;"><img src='images/figure2.jpg' style="max-width: 100%;max-height: 384px;"><a name="fig2"></p>
+	<p style="text-align: center;"><a name="fig2"></a><img src='images/figure2.jpg' style="max-width: 100%;max-height: 384px;"></p>
 	<div align="center"><b>Fig.2</b> The structure of Dialect MoE</div>
 
 	<br><br>
 
 	<h2>2. Chinese Dialect<a name="chinese_dialect"></a></h2>
-	<header style="font-size: xx-small;margin-bottom: 3em;">
-	<p>文本来源：①卢甲文《郑州方言志》、李荣 贺巍《洛阳方言词典》收录的语料；②释小龙、张国立、山新等演员的台词；③唐宋时期涉及河南名城（洛阳、开封）或历史人物（岳飞）的古诗词；④自编自我介绍。</p>
+	<header style="font-size: xx-small;margin-bottom: 3em;float: right;">
+	<p>文本来源：</p>
+	<ol style="padding-left: 1.5em;">
+		<li>卢甲文《郑州方言志》、李荣 贺巍《洛阳方言词典》收录的语料；</li>
+		<li>释小龙、张国立、山新等演员的台词；</li>
+		<li>唐宋时期涉及河南名城（洛阳、开封）或历史人物（岳飞）的古诗词；</li>
+		<li>自编自我介绍。</li>
+	</ol>
 	</header>
 	<h3>2.1 Short-Length Text-to-Speech Demo<a name="chinese_dialect_short"></a></h3>
 	<table style="width: 100%;">
@@ -273,8 +279,11 @@
 	<br><br>
 
 	<h2>4. Mandarin Speaker Fine-tune<a name="mandarin_speaker"></a></h2>
-	<header style="font-size: xx-small;margin-bottom: 3em;">
-	<p>文本来源：<a href="https://bcc.blcu.edu.cn/" target="_blank">BCC语料库</a>，部分有小调整。</p>
+	<header style="font-size: xx-small;margin-bottom: 3em;float: right;">
+	<p>文本来源：</p>
+	<ol style="padding-left: 1.5em;">
+		<li><a href="https://bcc.blcu.edu.cn/" target="_blank" style="color: deepskyblue;">BCC语料库</a>，部分有小调整。</li>
+	</ol>
 	</header>
 	<table style="width: 100%;">
 		<thead>
