--- a/bltts_tech_report/index.html
+++ b/bltts_tech_report/index.html
@@ -50,18 +50,18 @@
 		<li><a href="#mandarin_speaker">Mandarin Speaker Fine-tune</a>
 	</ul>
 
-	<p style="text-align: center;"><a name="fig1"></a><img src='images/figure1.jpg' style="max-width: 100%;max-height: 256px;"></p>
+	<a name="fig1"></a><p style="text-align: center;"><img src='images/figure1.jpg' style="max-width: 100%;max-height: 256px;"></p>
 	<div align="center"><b>Fig.1</b> The overview architecture of BLTTS</div>
 
 	<br><br>
 	
-	<p style="text-align: center;"><a name="fig2"></a><img src='images/figure2.jpg' style="max-width: 100%;max-height: 384px;"></p>
+	<a name="fig2"><p style="text-align: center;"></a><img src='images/figure2.jpg' style="max-width: 100%;max-height: 384px;"></p>
 	<div align="center"><b>Fig.2</b> The structure of Dialect MoE</div>
 
 	<br><br>
 
 	<h2>2. Chinese Dialect<a name="chinese_dialect"></a></h2>
-	<header style="font-size: xx-small;margin-bottom: 3em;float: right;">
+	<header style="font-size: xx-small;margin-bottom: 3em;float: right;display: inline-block;">
 	<p>文本来源：</p>
 	<ol style="padding-left: 1.5em;">
 		<li>卢甲文《郑州方言志》、李荣 贺巍《洛阳方言词典》收录的语料；</li>
@@ -226,50 +226,50 @@
 		<tr>
 			<th style="width: 10%;"><strong>Language</strong></th>
 			<th style="width: 40%;"><strong>Prompt</strong></th>
-			<th style="width: 25%;"><strong>Generated</strong></th>
-			<th style="width: 25%;"><strong>Generated</strong></th>
+			<th style="width: 25%;"><strong>Generated-A</strong></th>
+			<th style="width: 25%;"><strong>Generated-B</strong></th>
 		</tr>
 		</thead>
 		<tbody>
 		<tr>
 			<td>Mandarin</td>
-			<td><p>　</p><audio src="audios/24300009.wav" controls="" preload=""></audio></td>
+			<td><audio src="audios/24300009.wav" controls="" preload=""></audio></td>
 			<td><p>呃，这天气真是太热了，真是一点也不想动。</p><audio src="audios/M101-老年音-24300001_9400_1.wav" controls="" preload=""></audio></td>
 			<td><p>我突然想起一个冷笑话，呵呵呵，你想不想听？</p><audio src="audios/M101-老年音-24300001_9400_2.wav" controls="" preload=""></audio></td>
 		</tr>
 		<tr>
 			<td>Mandarin</td>
-			<td><p>　</p><audio src="audios/12900007.wav" controls="" preload=""></audio></td>
+			<td><audio src="audios/12900007.wav" controls="" preload=""></audio></td>
 			<td><p>嘶呃，关于这个问题我们还得好好思考思考，并不是那么简单的。</p><audio src="audios/M07-青年音-温情男_5380_1.wav" controls="" preload=""></audio></td>
 			<td><p>这个问题，嗯嘶，从另一个角度看，是不是对我们来说也是一件好事？</p><audio src="audios/M07-青年音-温情男_5380_2.wav" controls="" preload=""></audio></td>
 		</tr>
 		<tr>
 			<td>Mandarin</td>
-			<td><p>　</p><audio src="audios/22300058.wav" controls="" preload=""></audio></td>
+			<td><audio src="audios/22300058.wav" controls="" preload=""></audio></td>
 			<td><p>喽，明天又是周末啦，一起去看个电影吧。</p><audio src="audios/F02-少年音-可爱男_3635_1_2.wav" controls="" preload=""></audio></td>
 			<td><p>想出这个方法的人真是太有才了，那个人就是我，嘿嘿嘿嘿。</p><audio src="audios/F02-少年音-可爱男_3635_2_2.wav" controls="" preload=""></audio></td>
 		</tr>
 		<tr>
 			<td>Mandarin</td>
-			<td><p>　</p><audio src="audios/27400073.wav" controls="" preload=""></audio></td>
+			<td><audio src="audios/27400073.wav" controls="" preload=""></audio></td>
 			<td><p>嗯，爸爸说要好好吃饭才能长高高，所以我要吃多多的饭长高高。</p><audio src="audios/KM09-童声-27400001_3700_1_2.wav" controls="" preload=""></audio></td>
 			<td><p>呃，小孩子是不能玩火的，玩火容易受伤。</p><audio src="audios/KM09-童声-27400001_3700_2_2.wav" controls="" preload=""></audio></td>
 		</tr>
 		<tr>
 			<td>Mandarin</td>
-			<td><p>　</p><audio src="audios/23300005.wav" controls="" preload=""></audio></td>
+			<td><audio src="audios/23300005.wav" controls="" preload=""></audio></td>
 			<td><p>嗯，回想起当年，这里还是个小村庄。</p><audio src="audios/F04-老年音-老年女_5395_1.wav" controls="" preload=""></audio></td>
 			<td><p>说起我们以前的事，啊，那真是三天三夜都说不完。</p><audio src="audios/F04-老年音-老年女_5395_2.wav" controls="" preload=""></audio></td>
 		</tr>
 		<tr>
 			<td>Mandarin</td>
-			<td><p>　</p><audio src="audios/26500011.wav" controls="" preload=""></audio></td>
+			<td><audio src="audios/26500011.wav" controls="" preload=""></audio></td>
 			<td><p>呃，这个事已经过去那么久了，就不要再说了。</p><audio src="audios/F74-中年音-知性女_5395_1_2.wav" controls="" preload=""></audio></td>
 			<td><p>嘶，我才意识到我刚犯了个错。</p><audio src="audios/F74-中年音-知性女_5395_1_3.wav" controls="" preload=""></audio></td>
 		</tr>
 		<tr>
 			<td>Mandarin</td>
-			<td><p>　</p><audio src="audios/24100040.wav" controls="" preload=""></audio></td>
+			<td><audio src="audios/24100040.wav" controls="" preload=""></audio></td>
 			<td><p>按照我说的，不出三天你的病就好了，嘻嘻。</p><audio src="audios/F14-少年音-萝莉可爱型_4980_1.wav" controls="" preload=""></audio></td>
 			<td><p>哦，你说的是这个啊，这是我去海边的时候捡到的。</p><audio src="audios/F14-少年音-萝莉可爱型_4980_2.wav" controls="" preload=""></audio></td>
 		</tr>
@@ -279,7 +279,7 @@
 	<br><br>
 
 	<h2>4. Mandarin Speaker Fine-tune<a name="mandarin_speaker"></a></h2>
-	<header style="font-size: xx-small;margin-bottom: 3em;float: right;">
+	<header style="font-size: xx-small;margin-bottom: 3em;float: right;display: inline-block;">
 	<p>文本来源：</p>
 	<ol style="padding-left: 1.5em;">
 		<li><a href="https://bcc.blcu.edu.cn/" target="_blank" style="color: deepskyblue;">BCC语料库</a>，部分有小调整。</li>
