--- a/bltts_tech_report/index.html
+++ b/bltts_tech_report/index.html
@@ -61,15 +61,17 @@
 	<br><br>
 
 	<h2>2. Chinese Dialect<a name="chinese_dialect"></a></h2>
-	<header style="font-size: xx-small;margin-bottom: 3em;float: right;display: inline-block;">
-	<p>文本来源：</p>
-	<ol style="padding-left: 1.5em;">
-		<li>卢甲文《郑州方言志》、李荣 贺巍《洛阳方言词典》收录的语料；</li>
-		<li>释小龙、张国立、山新等演员的台词；</li>
-		<li>唐宋时期涉及河南名城（洛阳、开封）或历史人物（岳飞）的古诗词；</li>
-		<li>自编自我介绍。</li>
-	</ol>
-	</header>
+	<div style="text-align: right;background-color: green;">
+		<header style="font-size: xx-small;margin-bottom: 3em;background-color: red;">
+		<p>文本来源：</p>
+		<ol style="padding-left: 1.5em;">
+			<li>卢甲文《郑州方言志》、李荣 贺巍《洛阳方言词典》收录的语料；</li>
+			<li>释小龙、张国立、山新等演员的台词；</li>
+			<li>唐宋时期涉及河南名城（洛阳、开封）或历史人物（岳飞）的古诗词；</li>
+			<li>自编自我介绍。</li>
+		</ol>
+		</header>
+	</div>
 	<h3>2.1 Short-Length Text-to-Speech Demo<a name="chinese_dialect_short"></a></h3>
 	<table style="width: 100%;">
 		<thead>
