--- a/bltts_tech_report/index.html
+++ b/bltts_tech_report/index.html
@@ -62,8 +62,8 @@
 
 	<h2>2. Chinese Dialect<a name="chinese_dialect"></a></h2>
 	<div style="text-align: right;background-color: green;">
-		<header style="font-size: xx-small;margin-bottom: 3em;background-color: red;display: inline-block;">
-			<p>文本来源：</p>
+		<header style="text-align: left;font-size: xx-small;margin-bottom: 3em;background-color: red;display: inline-block;">
+			<span>文本来源：</span>
 			<ol style="padding-left: 1.5em;">
 				<li>卢甲文《郑州方言志》、李荣 贺巍《洛阳方言词典》收录的语料；</li>
 				<li>释小龙、张国立、山新等演员的台词；</li>
