--- a/bltts_tech_report/index.html
+++ b/bltts_tech_report/index.html
@@ -61,8 +61,8 @@
 	<br><br>
 
 	<h2>2. Chinese Dialect<a name="chinese_dialect"></a></h2>
-	<div style="text-align: right;background-color: green;">
-		<header style="text-align: left;font-size: xx-small;margin-bottom: 3em;background-color: red;display: inline-block;">
+	<div style="text-align: right;margin-bottom: 3em;">
+		<header style="text-align: left;font-size: xx-small;display: inline-block;">
 			<span>文本来源：</span>
 			<ol style="padding-left: 1.5em;">
 				<li>卢甲文《郑州方言志》、李荣 贺巍《洛阳方言词典》收录的语料；</li>
@@ -281,12 +281,14 @@
 	<br><br>
 
 	<h2>4. Mandarin Speaker Fine-tune<a name="mandarin_speaker"></a></h2>
-	<header style="font-size: xx-small;margin-bottom: 3em;float: right;display: inline-block;">
-	<p>文本来源：</p>
-	<ol style="padding-left: 1.5em;">
-		<li><a href="https://bcc.blcu.edu.cn/" target="_blank" style="color: deepskyblue;">BCC语料库</a>，部分有小调整。</li>
-	</ol>
-	</header>
+	<div style="text-align: right;margin-bottom: 3em;">
+		<header style="text-align: left;font-size: xx-small;display: inline-block;padding-left: 0;">
+			<span>文本来源：</span>
+			<ol style="padding-left: 1.5em;">
+				<li><a href="https://bcc.blcu.edu.cn/" target="_blank" style="color: deepskyblue;">BCC语料库</a>，部分有小调整。</li>
+			</ol>
+		</header>
+	</div>
 	<table style="width: 100%;">
 		<thead>
 		<tr>
