--- a/bltts_tech_report/index.html
+++ b/bltts_tech_report/index.html
@@ -51,27 +51,16 @@
 	</ul>
 
 	<a name="fig1"></a><p style="text-align: center;"><img src='images/figure1.jpg' style="max-width: 100%;max-height: 256px;"></p>
-	<div align="center"><b>Fig.1</b> The overview architecture of BLTTS</div>
+	<div align="center"><span style="font-weight: bold;">Fig.1</span> The overview architecture of BLTTS</div>
 
 	<br><br>
 	
 	<a name="fig2"><p style="text-align: center;"></a><img src='images/figure2.jpg' style="max-width: 100%;max-height: 384px;"></p>
-	<div align="center"><b>Fig.2</b> The structure of Dialect MoE</div>
+	<div align="center"><span style="font-weight: bold;">Fig.2</span> The structure of Dialect MoE</div>
 
 	<br><br>
 
 	<h2>2. Chinese Dialect<a name="chinese_dialect"></a></h2>
-	<div style="text-align: right;margin-bottom: 3em;">
-		<header style="text-align: left;font-size: xx-small;display: inline-block;">
-			<span>文本来源：</span>
-			<ol style="padding-left: 1.5em;">
-				<li>卢甲文《郑州方言志》、李荣 贺巍《洛阳方言词典》收录的语料；</li>
-				<li>释小龙、张国立、山新等演员的台词；</li>
-				<li>唐宋时期涉及河南名城（洛阳、开封）或历史人物（岳飞）的古诗词；</li>
-				<li>自编自我介绍。</li>
-			</ol>
-		</header>
-	</div>
 	<h3>2.1 Short-Length Text-to-Speech Demo<a name="chinese_dialect_short"></a></h3>
 	<table style="width: 100%;">
 		<thead>
@@ -219,6 +208,9 @@
 		</tr>
 		</tbody>
 	</table>
+	<footer style="text-align: left;margin-top: 3em;font-size: xx-small;display: inline-block;">
+		<p>文本来源：①卢甲文《郑州方言志》、李荣 贺巍《洛阳方言词典》收录的语料；②释小龙、张国立、山新等演员的台词；③唐宋时期涉及河南名城名人的古诗词；④自编自我介绍。</p>
+	</footer>
 
 	<br><br>
 	
@@ -281,14 +273,6 @@
 	<br><br>
 
 	<h2>4. Mandarin Speaker Fine-tune<a name="mandarin_speaker"></a></h2>
-	<div style="text-align: right;margin-bottom: 3em;">
-		<header style="text-align: left;font-size: xx-small;display: inline-block;padding-left: 0;">
-			<span>文本来源：</span>
-			<ol style="padding-left: 1.5em;">
-				<li><a href="https://bcc.blcu.edu.cn/" target="_blank" style="color: deepskyblue;">BCC语料库</a>，部分有小调整。</li>
-			</ol>
-		</header>
-	</div>
 	<table style="width: 100%;">
 		<thead>
 		<tr>
@@ -340,6 +324,9 @@
 		</tr>
 		</tbody>
 	</table>
+	<footer style="text-align: left;margin-top: 3em;font-size: xx-small;display: inline-block;">
+		<p>文本来源：<a href="https://bcc.blcu.edu.cn/" target="_blank" style="color: deepskyblue;">BCC语料库</a>，部分有小调整。</p>
+	</footer>
 	
 	
 	
