--- a/bltts_tech_report/index.html
+++ b/bltts_tech_report/index.html
@@ -209,7 +209,7 @@
 		</tbody>
 	</table>
 	<footer style="text-align: left;margin-top: 1em;font-size: xx-small;display: inline-block;">
-		<p>文本来源：①卢甲文《郑州方言志》、李荣 贺巍《洛阳方言词典》收录的语料；②释小龙、张国立、山新等演员的台词；③唐宋时期涉及河南名城名人的古诗词；④自编自我介绍。</p>
+		<p>Chinese Dialect 示例文本来源：①卢甲文《郑州方言志》、李荣 贺巍《洛阳方言词典》收录的语料；②释小龙、张国立、山新等演员的台词；③涉及河南名城名人的古诗；④自编自我介绍。</p>
 	</footer>
 
 	<br><br>
@@ -325,7 +325,7 @@
 		</tbody>
 	</table>
 	<footer style="text-align: left;margin-top: 1em;font-size: xx-small;display: inline-block;">
-		<p>文本来源：<a href="https://bcc.blcu.edu.cn/" target="_blank" style="color: deepskyblue;">BCC语料库</a>，部分有小调整。</p>
+		<p>Mandarin Speaker Fine-tune 示例文本来源：<a href="https://bcc.blcu.edu.cn/" target="_blank" style="color: deepskyblue;">BCC语料库</a>，部分有小调整。</p>
 	</footer>
 	
 	
