--- a/bltts_tech_report/index.html
+++ b/bltts_tech_report/index.html
@@ -41,11 +41,6 @@
 		<li><a href="#fig1">Bailing-TTS overview</a></li>
 		<li><a href="#fig2">Dialect MoE overview</a></li>
 		<li><a href="#chinese_dialect">Chinese Dialect</a></li>
-		<ul style="list-style-type: circle;padding-left: 1.5em;color: deepskyblue;">
-			<li><a href="#chinese_dialect_short">Short-Length Text-to-Speech Demo</a></li>
-			<li><a href="#chinese_dialect_medium">Medium-Length Text-to-Speech Demo</a></li>
-			<li><a href="#chinese_dialect_long">Long-Length Text-to-Speech Demo</a></li>
-		</ul>
 		<li><a href="#mandarin_0_shot">Mandarin Zero-shot In-context Learning</a>
 		<li><a href="#mandarin_speaker">Mandarin Speaker Fine-tune</a>
 	</ul>
@@ -55,13 +50,20 @@
 
 	<br><br>
 	
-	<a name="fig2"><p style="text-align: center;"></a><img src='images/figure2.jpg' style="max-width: 100%;max-height: 384px;"></p>
+	<a name="fig2"></a><p style="text-align: center;"><img src='images/figure2.jpg' style="max-width: 100%;max-height: 384px;"></p>
 	<div align="center"><span style="font-weight: bold;">Fig.2</span> The structure of Dialect MoE</div>
 
 	<br><br>
 
 	<h2>2. Chinese Dialect<a name="chinese_dialect"></a></h2>
-	<h3>2.1 Short-Length Text-to-Speech Demo<a name="chinese_dialect_short"></a></h3>
+	
+	<br><br>
+	
+	<audio src="audios/henan_18.wav" controls="" preload="" style="max-width: 60%;"></audio>
+	<div align="center"><span style="font-weight: bold;">Aud.1</span> Xxx Xxx Xxx Xxx Xxx</div>
+
+	<br><br>
+		
 	<table style="width: 100%;">
 		<thead>
 		<tr>
@@ -102,22 +104,6 @@
 			<td><audio src="audios/henan_C115.mp3" controls="" preload=""></audio></td>
 			<td><audio src="audios/henan_06.wav" controls="" preload=""></audio></td>
 		</tr>
-		</tbody>
-	</table>
-	
-	<br>
-	
-	<h3>2.2 Medium-Length Text-to-Speech Demo<a name="chinese_dialect_medium"></a></h3>
-	<table style="width: 100%;">
-		<thead>
-		<tr>
-			<th style="width: 10%;"><strong>Language</strong></th>
-			<th style="width: 40%;"><strong>Text</strong></th>
-			<th style="width: 25%;"><strong>Generated</strong></th>
-			<th style="width: 25%;"><strong>Ground Truth</strong></th>
-		</tr>
-		</thead>
-		<tbody>
 		<tr>
 			<td>Henan Dialect</td>
 			<td>恁要是不想上这课，你就跟我疯啊，别搁这儿跟我憋火儿啊。</td>
@@ -172,22 +158,6 @@
 			<td><audio src="audios/henan_C122.mp3" controls="" preload=""></audio></td>
 			<td><audio src="audios/henan_17.wav" controls="" preload=""></audio></td>
 		</tr>
-		</tbody>
-	</table>
-
-	<br>
-	
-	<h3>2.3 Long-Length Text-to-Speech Demo<a name="chinese_dialect_long"></a></h3>
-	<table style="width: 100%;">
-		<thead>
-		<tr>
-			<th style="width: 10%;"><strong>Language</strong></th>
-			<th style="width: 40%;"><strong>Text</strong></th>
-			<th style="width: 25%;"><strong>Generated</strong></th>
-			<th style="width: 25%;"><strong>Ground Truth</strong></th>
-		</tr>
-		</thead>
-		<tbody>
 		<tr>
 			<td>Henan Dialect</td>
 			<td>俺老家是河南南阳嘞，那可是个好地儿，回头恁去俺那儿喽，我管给恁安排。我这个人嘞，性格比较活泼，有啥说啥，从来不拐弯抹角嘞。平时就好跟朋友们聚一块儿，喷喷空儿，吃吃零嘴儿。跟俺那一片儿，关系都可好了，平时街坊邻居有啥事儿，我也都会去帮帮忙儿。</td>
