--- a/bltts_tech_report/index.html
+++ b/bltts_tech_report/index.html
@@ -35,7 +35,7 @@
 	<p style="text-align: center;">AI Lab, Giant Network</p>
 
 	<h2 id="abstract">1. Abstract<a name="abstract"></a></h2>
-	<p>Large-scale text-to-speech (TTS) models have made significant progress recently. However, they still fall short in the generation of Chinese dialectal speech. To address this, we propose Bailing-TTS, a family of large-scale TTS models capable of generating high-quality Chinese dialectal speech. Bailing-TTS serves as a foundation model for Chinese dialectal speech generation. First, continual semi-supervised learning is proposed to facilitate the alignment of text tokens and speech tokens. Second, the Chinese dialectal representation learning is developed using a specific transformer architecture and multi-stage training processes. With the proposed design of novel network architecture and corresponding strategy, Bailing-TTS is able to generate Chinese dialectal speech from text effectively and efficiently. Experiments demonstrate that Bailing-TTS generates Chinese dialectal speech towards human-like spontaneous representation.</p>
+	<p style="text-align:justify;">Large-scale text-to-speech (TTS) models have made significant progress recently. However, they still fall short in the generation of Chinese dialectal speech. To address this, we propose Bailing-TTS, a family of large-scale TTS models capable of generating high-quality Chinese dialectal speech. Bailing-TTS serves as a foundation model for Chinese dialectal speech generation. First, continual semi-supervised learning is proposed to facilitate the alignment of text tokens and speech tokens. Second, the Chinese dialectal representation learning is developed using a specific transformer architecture and multi-stage training processes. With the proposed design of novel network architecture and corresponding strategy, Bailing-TTS is able to generate Chinese dialectal speech from text effectively and efficiently. Experiments demonstrate that Bailing-TTS generates Chinese dialectal speech towards human-like spontaneous representation.</p>
 	<h2>Contents</h2>
 	<ul style="list-style-type: disc;padding-left: 1.5em;color: deepskyblue;">
 		<li><a href="#fig1">Bailing-TTS overview</a></li>
@@ -59,8 +59,8 @@
 	
 	<br><br>
 	
-	<audio src="audios/henan_18.wav" controls="" preload="" style="max-width: 60%;"></audio>
-	<div align="center"><span style="font-weight: bold;">Aud.1</span> Xxx Xxx Xxx Xxx Xxx</div>
+	<div align="center"><audio src="audios/henan_13.wav" controls="" preload="" style="max-width: 60%;"></audio></div>
+	<div align="center"><span style="font-weight: bold;">Aud.1</span> Reference ground truth</div>
 
 	<br><br>
 		
@@ -69,8 +69,7 @@
 		<tr>
 			<th style="width: 10%;"><strong>Language</strong></th>
 			<th style="width: 40%;"><strong>Text</strong></th>
-			<th style="width: 25%;"><strong>Generated</strong></th>
-			<th style="width: 25%;"><strong>Ground Truth</strong></th>
+			<th style="width: 50%;"><strong>Generated</strong></th>
 		</tr>
 		</thead>
 		<tbody>
@@ -78,103 +77,31 @@
 			<td>Henan Dialect</td>
 			<td>芝麻叶儿黄橛橛，有后娘就有后爹。</td>
 			<td><audio src="audios/henan_C102.mp3" controls="" preload=""></audio></td>
-			<td><audio src="audios/henan_01.wav" controls="" preload=""></audio></td>
-		</tr>
-		<tr>
-			<td>Henan Dialect</td>
-			<td>狗咬吕洞宾，不识好赖人。</td>
-			<td><audio src="audios/henan_C106.mp3" controls="" preload=""></audio></td>
-			<td><audio src="audios/henan_02.wav" controls="" preload=""></audio></td>
-		</tr>
-		<tr>
-			<td>Henan Dialect</td>
-			<td>蒸馍省，烙馍费，当房卖地吃锅盔。</td>
-			<td><audio src="audios/henan_C108.mp3" controls="" preload=""></audio></td>
-			<td><audio src="audios/henan_03.wav" controls="" preload=""></audio></td>
 		</tr>
 		<tr>
 			<td>Henan Dialect</td>
 			<td>小老鼠儿，上灯台，偷油吃，下不来。</td>
 			<td><audio src="audios/henan_C110.mp3" controls="" preload=""></audio></td>
-			<td><audio src="audios/henan_05.wav" controls="" preload=""></audio></td>
-		</tr>
-		<tr>
-			<td>Henan Dialect</td>
-			<td>我读书少，你别啜我。</td>
-			<td><audio src="audios/henan_C115.mp3" controls="" preload=""></audio></td>
-			<td><audio src="audios/henan_06.wav" controls="" preload=""></audio></td>
-		</tr>
-		<tr>
-			<td>Henan Dialect</td>
-			<td>恁要是不想上这课，你就跟我疯啊，别搁这儿跟我憋火儿啊。</td>
-			<td><audio src="audios/henan_C120.mp3" controls="" preload=""></audio></td>
-			<td><audio src="audios/henan_09.wav" controls="" preload=""></audio></td>
 		</tr>
 		<tr>
 			<td>Henan Dialect</td>
 			<td>椿树椿树你姓王，你发粗来我长长，我长长来穿衣裳，你发粗来做架梁。</td>
 			<td><audio src="audios/henan_C107.mp3" controls="" preload=""></audio></td>
-			<td><audio src="audios/henan_10.wav" controls="" preload=""></audio></td>
-		</tr>
-		<tr>
-			<td>Henan Dialect</td>
-			<td>你给我贱了不是，给我贱了不是，你再贱，我跟你说，我一巴掌脸给你㧾叉。</td>
-			<td><audio src="audios/henan_C113.mp3" controls="" preload=""></audio></td>
-			<td><audio src="audios/henan_11.wav" controls="" preload=""></audio></td>
-		</tr>
-		<tr>
-			<td>Henan Dialect</td>
-			<td>盘脚盘，盘三年，三年满，点油盐，油盐发，种芝麻，芝麻地里结打瓜。</td>
-			<td><audio src="audios/henan_C104.mp3" controls="" preload=""></audio></td>
-			<td><audio src="audios/henan_12.wav" controls="" preload=""></audio></td>
-		</tr>
-		<tr>
-			<td>Henan Dialect</td>
-			<td>肯定回呀，到时候介绍师父给恁认识，师父是这个世界上最好嘞人。</td>
-			<td><audio src="audios/henan_C123.mp3" controls="" preload=""></audio></td>
-			<td><audio src="audios/henan_13.wav" controls="" preload=""></audio></td>
-		</tr>
-		<tr>
-			<td>Henan Dialect</td>
-			<td>恁找谁呀？俺不认识恁，恁咋知道俺嘞大号呀？恁咋啥都知道哇？</td>
-			<td><audio src="audios/henan_C124.mp3" controls="" preload=""></audio></td>
-			<td><audio src="audios/henan_14.wav" controls="" preload=""></audio></td>
-		</tr>
-		<tr>
-			<td>Henan Dialect</td>
-			<td>汴水东流无限春，隋家宫阙已成尘。行人莫上长堤望，风起杨花愁杀人。</td>
-			<td><audio src="audios/henan_C128.mp3" controls="" preload=""></audio></td>
-			<td><audio src="audios/henan_15.wav" controls="" preload=""></audio></td>
 		</tr>
 		<tr>
 			<td>Henan Dialect</td>
 			<td>你真嘞以为我就是恁妈说嘞那样儿啊，我今天全靠着叶家、全靠着恁妈，我就是一个吃软饭嘞？</td>
 			<td><audio src="audios/henan_C121.mp3" controls="" preload=""></audio></td>
-			<td><audio src="audios/henan_16.wav" controls="" preload=""></audio></td>
-		</tr>
-		<tr>
-			<td>Henan Dialect</td>
-			<td>咱们有请刚从少林寺学艺十年归来嘞狗剩儿兄弟，给大伙儿打几路拳脚，啊，助助兴，咋样儿？</td>
-			<td><audio src="audios/henan_C122.mp3" controls="" preload=""></audio></td>
-			<td><audio src="audios/henan_17.wav" controls="" preload=""></audio></td>
 		</tr>
 		<tr>
 			<td>Henan Dialect</td>
 			<td>俺老家是河南南阳嘞，那可是个好地儿，回头恁去俺那儿喽，我管给恁安排。我这个人嘞，性格比较活泼，有啥说啥，从来不拐弯抹角嘞。平时就好跟朋友们聚一块儿，喷喷空儿，吃吃零嘴儿。跟俺那一片儿，关系都可好了，平时街坊邻居有啥事儿，我也都会去帮帮忙儿。</td>
 			<td><audio src="audios/henan_long_demo_1.wav" controls="" preload=""></audio></td>
-			<td><audio src="audios/henan_18.wav" controls="" preload=""></audio></td>
-		</tr>
-		<tr>
-			<td>Henan Dialect</td>
-			<td>我嘞爱好也可多了，好听豫剧，那腔调儿，听着得劲儿嘞很。没事嘞时候我也好出去溜达溜达，逛逛俺河南嘞大好风光。我还好捣鼓点儿吃嘞，像那烩面呀、胡辣汤呀，你别说，我自己做嘞也可像回事儿。</td>
-			<td><audio src="audios/henan_long_demo_2.wav" controls="" preload=""></audio></td>
-			<td><audio src="audios/henan_19.wav" controls="" preload=""></audio></td>
 		</tr>
 		<tr>
 			<td>Henan Dialect</td>
 			<td>我一直觉得，只要肯下劲儿，就没有啥事儿是干不成嘞。这就是我，一个可普通但是也可热情嘞人。希望大家多关照了，咱一起儿开开心心嘞！谢谢大家！</td>
 			<td><audio src="audios/henan_long_demo_3.wav" controls="" preload=""></audio></td>
-			<td><audio src="audios/henan_20.wav" controls="" preload=""></audio></td>
 		</tr>
 		</tbody>
 	</table>
