--- a/bltts_tech_report/index.html
+++ b/bltts_tech_report/index.html
@@ -32,7 +32,7 @@
 
 	<p style="text-align: center;">Xinhan Di, Zihao Chen, Yunming Liang, Junjie Zheng, Yihua Wang, Chaofan Ding</p>
 		
-	<p style="text-align: center;">AI Lab, Giant Network</p>
+	<p style="text-align: center;">AI LAB, Giant Network</p>
 
 	<h2 id="abstract">1. Abstract<a name="abstract"></a></h2>
 	<p style="text-align:justify;">Large-scale text-to-speech (TTS) models have made significant progress recently. However, they still fall short in the generation of Chinese dialectal speech. To address this, we propose Bailing-TTS, a family of large-scale TTS models capable of generating high-quality Chinese dialectal speech. Bailing-TTS serves as a foundation model for Chinese dialectal speech generation. First, continual semi-supervised learning is proposed to facilitate the alignment of text tokens and speech tokens. Second, the Chinese dialectal representation learning is developed using a specific transformer architecture and multi-stage training processes. With the proposed design of novel network architecture and corresponding strategy, Bailing-TTS is able to generate Chinese dialectal speech from text effectively and efficiently. Experiments demonstrate that Bailing-TTS generates Chinese dialectal speech towards human-like spontaneous representation.</p>
@@ -58,9 +58,21 @@
 	<h2>2. Chinese Dialect<a name="chinese_dialect"></a></h2>
 	
 	<br><br>
-	
-	<div align="center"><audio src="audios/henan_13.wav" controls="" preload="" style="width: 75%;"></audio></div>
-	<div align="center"><span style="font-weight: bold;">Aud.1</span> Reference ground truth</div>
+
+	<div align="center">
+		<table style="width: 75%;">
+			<thead>
+			<tr>
+				<th style="width: 10%;"><strong><span style="font-weight: bold;">Aud.1</span> Reference ground truth</strong></th>
+			</tr>
+			</thead>
+			<tbody>
+			<tr>
+				<td><audio src="audios/henan_13.wav" controls="" preload=""></audio></td>
+			</tr>
+			</tbody>
+		</table>
+	</div>
 
 	<br><br>
 		
@@ -106,7 +118,7 @@
 		</tbody>
 	</table>
 	<footer style="text-align: left;margin-top: 1em;font-size: xx-small;display: inline-block;">
-		<p>Chinese Dialect 示例文本来源：①卢甲文《郑州方言志》、李荣 贺巍《洛阳方言词典》收录的语料；②释小龙、张国立、山新等演员的台词；③涉及河南名城名人的古诗；④自编自我介绍。</p>
+		<p>Chinese Dialect 示例文本来源：①卢甲文《郑州方言志》收录的语料；②张国立的台词；③自编自我介绍。</p>
 	</footer>
 
 	<br><br>
