--- a/bltts_tech_report/index.html
+++ b/bltts_tech_report/index.html
@@ -63,7 +63,7 @@
 		<table style="width: 75%;">
 			<thead>
 			<tr>
-				<th style="width: 10%;"><strong><span style="font-weight: bold;">Aud.1</span> Reference ground truth</strong></th>
+				<th style="width: 10%;"><strong>Reference Speaker Speech</strong></th>
 			</tr>
 			</thead>
 			<tbody>
