--- a/bltts_tech_report/index.html
+++ b/bltts_tech_report/index.html
@@ -150,7 +150,7 @@
 			<td>Mandarin</td>
 			<td><audio src="audios/22300058.wav" controls="" preload=""></audio></td>
 			<td><p>喽，明天又是周末啦，一起去看个电影吧。</p><audio src="audios/F02-少年音-可爱男_3635_1_2.wav" controls="" preload=""></audio></td>
-			<td><p>想出这个方法的人真是太有才了，那个人就是我，嘿嘿嘿嘿。</p><audio src="audios/F02-少年音-可爱男_3635_2_2.wav" controls="" preload=""></audio></td>
+			<td><p>啊，真可惜，差一点就是第一了呢。</p><audio src="audios/F02-少年音-可爱男_3635_2_2.wav" controls="" preload=""></audio></td>
 		</tr>
 		<tr>
 			<td>Mandarin</td>
@@ -173,7 +173,7 @@
 		<tr>
 			<td>Mandarin</td>
 			<td><audio src="audios/24100040.wav" controls="" preload=""></audio></td>
-			<td><p>按照我说的，不出三天你的病就好了，嘻嘻。</p><audio src="audios/F14-少年音-萝莉可爱型_4980_1.wav" controls="" preload=""></audio></td>
+			<td><p>嗯，虽然天气很热，但是我还是坚持每天跑步。</p><audio src="audios/F14-少年音-萝莉可爱型_4980_1.wav" controls="" preload=""></audio></td>
 			<td><p>哦，你说的是这个啊，这是我去海边的时候捡到的。</p><audio src="audios/F14-少年音-萝莉可爱型_4980_2.wav" controls="" preload=""></audio></td>
 		</tr>
 		</tbody>
