--- a/bltts_tech_report/index.html
+++ b/bltts_tech_report/index.html
@@ -32,7 +32,7 @@
 
 	<p style="text-align: center;">Xinhan Di, Zihao Chen, Yunming Liang, Junjie Zheng, Yihua Wang, Chaofan Ding</p>
 		
-	<p style="text-align: center;">AI LAB, Giant Network</p>
+	<p style="text-align: center;">AI Lab, Giant Network</p>
 
 	<h2 id="abstract">1. Abstract<a name="abstract"></a></h2>
 	<p style="text-align:justify;">Large-scale text-to-speech (TTS) models have made significant progress recently. However, they still fall short in the generation of Chinese dialectal speech. To address this, we propose Bailing-TTS, a family of large-scale TTS models capable of generating high-quality Chinese dialectal speech. Bailing-TTS serves as a foundation model for Chinese dialectal speech generation. First, continual semi-supervised learning is proposed to facilitate the alignment of text tokens and speech tokens. Second, the Chinese dialectal representation learning is developed using a specific transformer architecture and multi-stage training processes. With the proposed design of novel network architecture and corresponding strategy, Bailing-TTS is able to generate Chinese dialectal speech from text effectively and efficiently. Experiments demonstrate that Bailing-TTS generates Chinese dialectal speech towards human-like spontaneous representation.</p>
