--- a/bltts_tech_report/index.html
+++ b/bltts_tech_report/index.html
@@ -30,9 +30,11 @@
 	<section class="main-content" style="padding: 50px 150px;">
 	<h1 id="title">Bailing-TTS: Chinese Dialectal Speech Synthesis Towards Human-like Spontaneous Representation</h1>
 
+	<p style="text-align: center;">[<a href="" target="_blank" style="color: deepskyblue;">Paper</a>]</p>
+
 	<p style="text-align: center;">Xinhan Di, Zihao Chen, Yunming Liang, Junjie Zheng, Yihua Wang, Chaofan Ding</p>
 		
-	<p style="text-align: center;">AI Lab, Giant Network</p>
+	<p style="font-weight: bold;text-align: center;">AI Lab, Giant Network</p>
 
 	<h2 id="abstract">1. Abstract<a name="abstract"></a></h2>
 	<p style="text-align:justify;">Large-scale text-to-speech (TTS) models have made significant progress recently. However, they still fall short in the generation of Chinese dialectal speech. To address this, we propose Bailing-TTS, a family of large-scale TTS models capable of generating high-quality Chinese dialectal speech. Bailing-TTS serves as a foundation model for Chinese dialectal speech generation. First, continual semi-supervised learning is proposed to facilitate the alignment of text tokens and speech tokens. Second, the Chinese dialectal representation learning is developed using a specific transformer architecture and multi-stage training processes. With the proposed design of novel network architecture and corresponding strategy, Bailing-TTS is able to generate Chinese dialectal speech from text effectively and efficiently. Experiments demonstrate that Bailing-TTS generates Chinese dialectal speech towards human-like spontaneous representation.</p>
