--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -41,7 +41,7 @@
             <h2>Promotion Video</h2>
             <p>Bailing-Foley is xxxxx xxxxx xxxxx xxx xxxx.</p>
             <div style="text-align: center;">
-                <iframe style="width: 768px;" src="//player.bilibili.com/player.html?isOutside=true&aid=113503687934302&bvid=BV1z7UWYbE83&cid=26825328938&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
+                <iframe style="height: 480px; width: 640px;" src="//player.bilibili.com/player.html?isOutside=true&aid=113503687934302&bvid=BV1z7UWYbE83&cid=26825328938&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
             </div>
             <br>
             <div style="text-align: center;">Tips: Bailing-Foley is xxxxx xxxxx xxxxx xxx xxxx.</div>
