--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -199,8 +199,8 @@
         
             <h3>Group 5 - Text-control Video to Audio Generation</h3>
             <div class="row">
-                <p style="width: 49%;">Without Prompt</p>
-                <p style="width: 49%;">Prompt: Xxxxx xxxxx xxxxx xxx xxxx</p>
+                <span style="width: 49%;">Without Prompt</span>
+                <span style="width: 49%;">Prompt: Xxxxx xxxxx xxxxx xxx xxxx</span>
             </div>
             <div class="row">
                 <video style="width: 49%;" controls>
