--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -54,7 +54,7 @@
 
         <article class="content">
             <h2>Method</h2>
-            <img style="width: 768px;" src="images/method.png" alt="overview of Bailing-Foley">
+            <img class="img_illustration" src="images/method.png" alt="overview of Bailing-Foley">
             <p>Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx.</p>
         </article>
 
