--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -98,14 +98,14 @@
                     <source src="videos/anime_6.mp4">
                 </video>
             </div>
-            <div class="row">
+            <!--<div class="row">
                 <video style="width: 49%;" controls>
                     <source src="videos/anime_7.mp4">
                 </video>
                 <video style="width: 49%;" controls>
                     <source src="videos/anime_8.mp4">
                 </video>
-            </div>
+            </div>-->
 
             <div class="leftAlign">
                 <h3>Group 2 - AI Generated</h3>
@@ -134,14 +134,14 @@
                     <source src="videos/generated_6.mp4">
                 </video>
             </div>
-            <div class="row">
+            <!--<div class="row">
                 <video style="width: 49%;" controls>
                     <source src="videos/generated_7.mp4">
                 </video>
                 <video style="width: 49%;" controls>
                     <source src="videos/generated_8.mp4">
                 </video>
-            </div>
+            </div>-->
 
             <div class="leftAlign">
                 <h3>Group 3 - Game</h3>
@@ -212,6 +212,78 @@
                 </video>
                 <video style="width: 49%;" controls>
                     <source src="videos/real_8.mp4">
+                </video>
+            </div>
+            <div class="row">
+                <video style="width: 49%;" controls>
+                    <source src="videos/real_9.mp4">
+                </video>
+                <video style="width: 49%;" controls>
+                    <source src="videos/real_10.mp4">
+                </video>
+            </div>
+            <div class="row">
+                <video style="width: 49%;" controls>
+                    <source src="videos/real_11.mp4">
+                </video>
+                <video style="width: 49%;" controls>
+                    <source src="videos/real_12.mp4">
+                </video>
+            </div>
+            <div class="row">
+                <video style="width: 49%;" controls>
+                    <source src="videos/real_13.mp4">
+                </video>
+                <video style="width: 49%;" controls>
+                    <source src="videos/real_14.mp4">
+                </video>
+            </div>
+            <div class="row">
+                <video style="width: 49%;" controls>
+                    <source src="videos/real_15.mp4">
+                </video>
+                <video style="width: 49%;" controls>
+                    <source src="videos/real_16.mp4">
+                </video>
+            </div>
+            <div class="row">
+                <video style="width: 49%;" controls>
+                    <source src="videos/real_17.mp4">
+                </video>
+                <video style="width: 49%;" controls>
+                    <source src="videos/real_18.mp4">
+                </video>
+            </div>
+            <div class="row">
+                <video style="width: 49%;" controls>
+                    <source src="videos/real_19.mp4">
+                </video>
+                <video style="width: 49%;" controls>
+                    <source src="videos/real_20.mp4">
+                </video>
+            </div>
+            <div class="row">
+                <video style="width: 49%;" controls>
+                    <source src="videos/real_21.mp4">
+                </video>
+                <video style="width: 49%;" controls>
+                    <source src="videos/real_22.mp4">
+                </video>
+            </div>
+            <div class="row">
+                <video style="width: 49%;" controls>
+                    <source src="videos/real_23.mp4">
+                </video>
+                <video style="width: 49%;" controls>
+                    <source src="videos/real_24.mp4">
+                </video>
+            </div>
+            <div class="row">
+                <video style="width: 49%;" controls>
+                    <source src="videos/real_25.mp4">
+                </video>
+                <video style="width: 49%;" controls>
+                    <source src="videos/real_26.mp4">
                 </video>
             </div>
         
