--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -9,27 +9,29 @@
     <body>
         <header class="content">
             <div class="centerAlign">
-                <h1>Bailing-Foley: Xxxxx xxxxx xxxxx xxx xxxx.</h1>
+                <h1>Bailing-Foley: Video-Guided Sound Effects Generation with Multimodal Chain-of-Thoughts Controls</h1>
             </div>
-            <p id="authors">
-                <a href="https://git.devcloud.ztgame.com/">Xxxxx XXX<sup>1</sup></a>
-                <a href="https://git.devcloud.ztgame.com/">Xxxxx XXX<sup>2</sup></a>
-                <a href="https://git.devcloud.ztgame.com/">Xxxxx XXX<sup>1</sup></a>
-                <a href="https://git.devcloud.ztgame.com/">Xxxxx XXX<sup>2</sup></a>
-                <a href="https://git.devcloud.ztgame.com/">Xxxxx XXX<sup>1</sup></a>
+            <p id="authors" style="font-size: 16px;">
+                <a href="https://git.devcloud.ztgame.com/">Zihao Chen<sup>1</sup></a><span>,&nbsp;</span>
+                <a href="https://git.devcloud.ztgame.com/">Haomin Zhang<sup>2</sup></a><span>,&nbsp;</span>
+                <a href="https://git.devcloud.ztgame.com/">Xinhan Di<sup>1</sup></a><span>,&nbsp;</span>
+                <a href="https://git.devcloud.ztgame.com/">Haoyu Wang<sup>1, 2</sup></a><span>,&nbsp;</span>
+                <a href="https://git.devcloud.ztgame.com/">Sizhe Shan<sup>1, 2</sup></a><span>,&nbsp;</span>
+                <a href="https://git.devcloud.ztgame.com/">Junjie Zheng<sup>1</sup></a><span>,&nbsp;</span>
+                <a href="https://git.devcloud.ztgame.com/">Yunming Liang<sup>1</sup></a><span>,&nbsp;</span>
+                <a href="https://git.devcloud.ztgame.com/">Yihan Fan<sup>1, 3</sup></a><span>,&nbsp;</span>
+                <a href="https://git.devcloud.ztgame.com/">Yihua Wang<sup>1</sup></a><span>,&nbsp;</span>
+                <a href="https://git.devcloud.ztgame.com/">Chaofan Ding<sup>1</sup></a><span>&nbsp;and&nbsp;</span>
+                <a href="https://git.devcloud.ztgame.com/">Lei Xie<sup>4</sup></a>
                 <br>
-                <a href="https://git.devcloud.ztgame.com/">Xxxxx XXX<sup>2</sup></a>
-                <a href="https://git.devcloud.ztgame.com/">Xxxxx XXX<sup>1</sup></a>
-                <a href="https://git.devcloud.ztgame.com/">Xxxxx XXX<sup>2</sup></a>
-                <a href="https://git.devcloud.ztgame.com/">Xxxxx XXX<sup>1</sup></a>
-                <a href="https://git.devcloud.ztgame.com/">Xxxxx XXX<sup>2</sup></a>
-                
                 <br>
+                <span><sup>1</sup>AI Lab, Giant Network</span>
                 <br>
-                <span style="font-size: 16px;">
-                    <sup>1</sup>Xxxxx Xxxxx, Xxxxx
-                    <sup>2</sup>Xxxxx Xxxxx, Xxxxx
-                </span>
+                <span><sup>2</sup>Zhejiang University</span>
+                <br>
+                <span><sup>3</sup>East China University of Science and Technology</span>
+                <br>
+                <span><sup>4</sup>Northwestern Polytechnical University</span>
             </p>
         
             <p style="text-align: center;">
@@ -62,7 +64,9 @@
             <div class="centerAlign">
                 <h2>Method</h2>
             </div>
-            <img class="img_illustration" src="images/method.png" alt="overview of Bailing-Foley">
+            <div style="text-align: center;">
+                <img class="img_illustration" src="images/method.png" alt="overview of Bailing-Foley">
+            </div>
             <p>Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx.</p>
         </article>
 
