--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -12,17 +12,17 @@
                 <h1>Bailing-Foley: Video-Guided Sound Effects Generation with Multimodal Chain-of-Thoughts Controls</h1>
             </div>
             <p id="authors" style="font-size: 16px;">
-                <a href="https://git.devcloud.ztgame.com/">Zihao Chen<sup>1</sup></a><span>,&nbsp;</span>
-                <a href="https://git.devcloud.ztgame.com/">Haomin Zhang<sup>2</sup></a><span>,&nbsp;</span>
-                <a href="https://git.devcloud.ztgame.com/">Xinhan Di<sup>1</sup></a><span>,&nbsp;</span>
-                <a href="https://git.devcloud.ztgame.com/">Haoyu Wang<sup>1, 2</sup></a><span>,&nbsp;</span>
-                <a href="https://git.devcloud.ztgame.com/">Sizhe Shan<sup>1, 2</sup></a><span>,&nbsp;</span>
-                <a href="https://git.devcloud.ztgame.com/">Junjie Zheng<sup>1</sup></a><span>,&nbsp;</span>
-                <a href="https://git.devcloud.ztgame.com/">Yunming Liang<sup>1</sup></a><span>,&nbsp;</span>
-                <a href="https://git.devcloud.ztgame.com/">Yihan Fan<sup>1, 3</sup></a><span>,&nbsp;</span>
-                <a href="https://git.devcloud.ztgame.com/">Yihua Wang<sup>1</sup></a><span>,&nbsp;</span>
-                <a href="https://git.devcloud.ztgame.com/">Chaofan Ding<sup>1</sup></a><span>&nbsp;and&nbsp;</span>
-                <a href="https://git.devcloud.ztgame.com/">Lei Xie<sup>4</sup></a>
+                <span>Zihao Chen<sup>1</sup></span><span>,&nbsp;</span>
+                <span>Haomin Zhang<sup>2</sup></span><span>,&nbsp;</span>
+                <span>Xinhan Di<sup>1</sup></span><span>,&nbsp;</span>
+                <span>Haoyu Wang<sup>1, 2</sup></span><span>,&nbsp;</span>
+                <span>Sizhe Shan<sup>1, 2</sup></span><span>,&nbsp;</span>
+                <span>Junjie Zheng<sup>1</sup></span><span>,&nbsp;</span>
+                <span>Yunming Liang<sup>1</sup></span><span>,&nbsp;</span>
+                <span>Yihan Fan<sup>1, 3</sup></span><span>,&nbsp;</span>
+                <span>Yihua Wang<sup>1</sup></span><span>,&nbsp;</span>
+                <span>Chaofan Ding<sup>1</sup></span><span>&nbsp;and&nbsp;</span>
+                <span>Lei Xie<sup>4</sup></span>
                 <br>
                 <br>
                 <span><sup>1</sup>AI Lab, Giant Network</span>
@@ -116,7 +116,7 @@
             </div>
             <div class="row">
                 <video style="width: 49%;" controls>
-                    <source src="videos/generated_1.mp4">
+                    <source src="videos/generated_6.mp4">
                 </video>
                 <video style="width: 49%;" controls>
                     <source src="videos/generated_2.mp4">
@@ -135,7 +135,7 @@
                     <source src="videos/generated_5.mp4">
                 </video>
                 <video style="width: 49%;" controls>
-                    <source src="videos/generated_6.mp4">
+                    <source src="videos/generated_1.mp4">
                 </video>
             </div>
             <!--<div class="row">
